--- a/preprocessHotel.ipynb
+++ b/preprocessHotel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "2c58f1de-74fd-4339-8bb3-15b571be54fa",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "4e91d194-1d55-4701-8549-a45287f78e98",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "893e554c-e425-475b-be7d-d4dc5714613a",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "878561it [00:10, 81226.22it/s]"
+      "878561it [00:10, 82902.31it/s]\n"
      ]
     },
     {
@@ -56,13 +56,6 @@
      "output_type": "stream",
      "text": [
       "576689 3945 878561\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -94,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "362d526b-fce7-4b08-b980-5087956af61d",
    "metadata": {},
    "outputs": [
@@ -121,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "9de28eea-31d2-4e43-9d09-679217e3c815",
    "metadata": {},
    "outputs": [
@@ -129,7 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████| 878561/878561 [03:22<00:00, 4341.49it/s]"
+      "100%|████████████████████████████████████████████████████████████████████████| 878561/878561 [03:23<00:00, 4321.65it/s]"
      ]
     },
     {
@@ -180,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "94754108-1a30-4545-ba90-7e2229ed1736",
    "metadata": {},
    "outputs": [],
@@ -197,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "ada6621b-b8ed-4a05-9f5a-f05df894bb82",
    "metadata": {},
    "outputs": [],
@@ -212,10 +205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c2062b0d-4f13-46f6-94f7-d82f8eb6fdce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of authors in training set: 9579\n",
+      "Number of authors in testing set: 2394\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of authors in training set:\", len(train_authors))\n",
     "print(\"Number of authors in testing set:\", len(test_authors))"
@@ -3208,11 +3210,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e5bafc0f-aa4d-477c-b9fb-b3f0dfd4f8ce",
+   "execution_count": 12,
+   "id": "822cd9ef-8017-45ef-a3ad-06cfbc8ad69b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def load_groundTruth(gt_file):\n",
+    "    gt = pd.read_csv(gt_file)\n",
+    "    print(\"number of review: \", len(gt))\n",
+    "    u2rs = {}\n",
+    "    for uid, rid, r in zip(gt['user_id'], gt['rest_id'], gt['rating']):\n",
+    "        if uid not in u2rs:\n",
+    "            u2rs[uid] = []\n",
+    "        u2rs[uid].append((str(rid), r))\n",
+    "    return u2rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e5bafc0f-aa4d-477c-b9fb-b3f0dfd4f8ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of review:  84904\n"
+     ]
+    }
+   ],
+   "source": [
+    "gt = load_groundTruth(f'./data/reviews/{\"tripAdvisor\"}.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d5879dfe-906c-41aa-b670-b3ef58787b0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11973"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(gt.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d20bfce7-ea95-4a54-a476-ec630d8c644a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11414"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8391+3023"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a3441425-e0ab-4ae4-bba1-664c920f5a95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11893"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "9499+2394"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "31aa3e8c-d7a5-4cc3-8197-360af7edf7d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(f'./data/keywords/tripAdvisor-keywords_train.json')\n",
+    "data = json.load(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c32ad31e-ac2f-49c9-9d0e-c7f8b431a7e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = data['np2users']\n",
+    "us = []\n",
+    "for k in tmp.keys():\n",
+    "    us.extend(tmp[k])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "3f4131c1-6ace-4839-a27c-eb5d7be617f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9499"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(us))"
+   ]
   }
  ],
  "metadata": {
